about.css
/* === Layout === */
body {
  margin: 0;
}

#about-overlay {
  display: flex;
  flex-direction: row;
  height: 100vh;
}

.info-image-container {
  width: 45%;
  height: 100%;
  overflow: hidden;
}

.info-section-container {
  text-align: right;
  width: 55%;
}

/* === Styling Image === */
.info-image-container img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

/* === Styling Info === */
.main-name {
  display: inline-block;
  font-family: "Bebas Neue", cursive;
  font-size: 64px;
  margin: 0;
}

.main-bio {
  width: 50%;
  font-weight: 600;
}

.phone-number,
.email,
.instagram {
  position: absolute;
  display: inline-block;
  font-family: "Bebas Neue", cursive;
  margin: 0;
  font-size: 6rem;
}

.phone-number {
  left: 15%;
  bottom: 21rem;
}
.email {
  left: 29%;
  bottom: 15rem;
}

.instagram {
  left: 20%;
  bottom: 9rem;
}

.info-contact-container a {
  color: #000000;
}

